Migrate to latest appengine and gcloud usage